css/styles.css
*,
::after,
::before {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    --font-family-bebasneue: "Bebas Neue";
    --font-family-poppins: "Poppins";
    --color: #fff;
    --background-color: #fff;
    --color-text-blue: #38488d;
    --color-body-blue: #0055ca;
    --color-menu-hover: rgb(0, 234, 255);
    --background-color-menu-opacity: rgba(17, 148, 165, 0.8);
    background-color: var(--color);
    color: var(--color-body-blue);
}

li {
    list-style: none;
}

a {
    text-decoration: none;
    color: var(--color);
    font-size: 1rem;
}

a:hover {
    color: var(--color-menu-hover);
}

/* NAV SECTION */
/* header */
.header {
    position: fixed;
    top: 0;
    width: 100vw;
    padding: 0 2rem;
    background-color: var(--color-text-blue);
}

.navbar {
    height: 10vh;
    max-width: 1200px;
    margin: 0 auto;
    display: flex;
    align-items: center;
    justify-content: space-between;
    
}

.logo {
    width: 80px;
    height: auto;
}

.links {
    display: none;
    font-size: 1.5rem;
    gap: 2rem;
    font-weight: bold;
    font-family: "bebas neue";
}

.toggle_btn {
    color: var(--color);
    font-size: 1.5rem;
    cursor: pointer;
    display: block;
}

/* DROPDOWN MENU */
.dropdown_menu {
    display: block;
    position: absolute;
    right: 2rem;
    top: 7vh;
    height: 0;
    min-width: 300px;
    max-width: 70vw;
    width: 70vw;
    /* background-color: 00EDFC; */
    background-color: var(--background-color-menu-opacity);
    backdrop-filter: blur(15px);
    border-radius: 10px;
    overflow: hidden;
    transition: all 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
}

.dropdown_menu.open {
    height: auto;
    padding: 2rem 0;
}

.dropdown_menu li {
    padding: 0.7rem;
    display: flex;
    align-items: center;
    justify-content: center;
}

/*HOME SECTION*/


.l-section{
    margin-bottom: 4rem;
}

.center-block{
    margin-left: auto;
    margin-right: auto;
}

.center-content{
    text-align: center;
    color: var(--color-text-blue);
    font-family: "Poppins";
    border: s1px solid red;

}

.home-banner{
    padding: 2rem 1rem 3rem;
    color: #fff;
    text-align: center;
    clip-path: polygon(0 0, 100% 0, 100% 100%, 0 94%);
    margin-top: 10.5vh;


}

.home-banner__content{
    position: relative;
}

.home-banner__logo{
    height: 6rem;
    width: auto;
    display: block;
    margin: 0 auto .5rem;
}

.home-banner__title{
    margin: 0 auto .5rem;
    background-color: #38488D;
    padding: 1em;
}

.home-banner__hero-image{
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    object-fit: cover;
    object-position: center;
    
}

.cta_button{
    display: inline-block;
    border-color: #fff;
    border-radius: 1em;
    padding: .5em .7em;
    margin-top: 10px;
    background-color: #38488D;
    color: #fff;
    transition: .2s all;
}

.cta_button:hover{
    border-color: #38488D;
    background-color: #fff;
    color: #38488D;
}





/*VALUES SECTION*/
.values-body {
    color: var(--color);
    background-image: url(../assets/img/background/Recurso\ 1.png);
    background-size: cover;
    background-repeat: no-repeat;
    width: 100%;
    height: auto;
    margin-top: 8vh;
}

.values__title {
    font-family: var(--font-family-bebasneue);
    font-size: 3rem;
    text-align: center;
    padding-top: 9%;
}

.value__item {
    display: flex;
    align-items: center;
    gap: 0.5rem;
    margin: 1%;
    padding-top: 0.8rem;
}

.value__icon {
    min-width: 50px;
    max-width: 80px;
}

.value__icon img {
    display: block;
    width: 100%;
}

.value__title {
    font-family: var(--font-family-bebasneue);
}

.value__description {
    font-family: var(--font-family-poppins);
}

/*SERVICES*/
.services_main_title {
    font-family: "Bebas Neue";
    font-size: 3rem;
    text-align: center;
    color: var(--color-text-blue);
    margin-top: 4%;
}

.services__item {
    background-color: var(--color);
    display: flex;
    align-items: center;
    gap: 1rem;
    margin: 4%;
}

.services_img {
    max-width: 50px;
    min-width: 30px;
}

.services_img img {
    width: 100%;
    background-color: var(--color);
}

.services_title {
    font-family: "Bebas Neue";
    justify-content: flex-start;
    color: var(--color-text-blue);
}

.services_description {
    font-family: "poppins";
    color: var(--color-text-blue);
}

/*GROUP TEAM*/
.team {
    background-image: url(../assets/img/background/6106991.jpg);
    width: 100vw;
    height: 35vh;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}
.groupTeam_container {
    width: 90vw;
    margin: auto;
}
.groupTeam_title {
    font-family: var(--font-family-bebasneue);
    font-size: 2rem;
    text-align: center;
    color: var(--color);
    padding-top: 9vh;
    height: 15vh;
}

.groupTeam__item {
    display: flex;
    flex-wrap: nowrap;
    flex-direction: row;
    align-items: flex-end;
    height: 20vh;
}

.groupTeam__item img:hover {
    filter: hue-rotate(-60deg);
}

/*TEAM*/

.team-coders {
    margin-top: 5vh;
    background-color: var(--color);
}

.layout {
    margin-bottom: 3rem;
    padding: 1rem;
    
}

.layout:hover{
    border: 1px solid #38488D;
    box-shadow: -8px -8px 1px #b2bbe0;
    transform: translate(-20px);
    transition: .4s all;
}

.image {
    max-width: 150px;
    margin-left: auto;
    margin-right: auto;
}

.content-text {
    text-align: center;
    color: var(--color-text-blue);
    font-family: var(--font-family-poppins);
}

.content-text h3,
h4 {
    line-height: 2rem;
    font-family: var(--font-family-bebasneue);
}

img {
    width: 100%;
    display: block;
}

/*FOOTER SECTION*/

footer {
    background-color: var(--color-text-blue);
    padding: 20px;
    text-align: center;
    color: var(--color);
}

.container-footer {
    display: flex;
    flex-direction: column;
    align-items: center;
   
}

.footer-image{
    
    max-width: 800px;
    margin-top: 2rem;
}

.footer-image iframe{
    width: 600px;
}

.footer-form {
    padding: 1rem;
    margin-top: 2rem;
    margin-right: 1rem;
}

.footer__button{
    background-color: white;
}

#footer-form input[type="text"],
#footer-form textarea {
    display: block;
    padding: 10px;
    margin: 10px;
    border: 1px solid #ccc;
    width: 100%;
    max-width: 300px;
}

#footer-form textarea {
    height: 100px;
}

#footer-form button[type="submit"] {
    padding: 10px 30px;
    background-color: var(--color);
    color: var(--color-text-blue);
    border: none;
    border-radius: 20px;
    cursor: pointer;
    margin-top: 30px;
    margin-left: 1rem;
}

.icons-rs {
    display: flex;
    justify-content: center;
    align-items: center;
    margin-top: 30px;
}

.icons-rs img {
    width: 30px;
    height: 30px;
    margin: 0 10px;
}

.icons-img:first-child {
    margin-left: 0;
}

.icons-img:last-child {
    margin-right: 0;
}

.icon-copyright {
    display: flex;
    align-items: center;
    margin-top: 30px;
}

.icon-copyright img {
    width: 30px;
    height: 30px;
}

.fake-web,
.fake-mail {
    display: flex;
    align-items: center;
    justify-content: center;
    margin-top: 20px;
}

.fake-web p,
.fake-mail p {
    color: var(--color);
    text-align: center;
    font-family: var(--font-family-poppins);
}

.fake-mail p {
    margin-bottom: 20px;
}

.footer-image iframe {
    max-width: 300px;
}

#footer-form input[type="text"],
#footer-form textarea {
    max-width: 250px;
}

/* **************************** MEDIA QUERIES ************************************** */

@media screen and (min-width: 700px) {
    /* SETION NAVBAR DESKTOP */
    .navbar .links {
        display: flex;
    }

    .navbar .toggle_btn {
        display: none;
    }

    .dropdown_menu {
        display: block;
        max-width: 20vw;
    }

    /* SECTION VALUES DESKTOP */
    .values-body {
        background-image: url(../assets/img/background/Recurso\ 3.png);
    }

    .values {
        display: grid;
        grid-template-columns: repeat(2, auto);
        grid-template-rows: repeat(3, auto);
        gap: 2rem;
    }

    .values__title {
        font-family: "Bebas Neue";
        font-size: 3rem;
        text-align: center;
        padding-top: 4%;
    }

    .value__item {
        flex-direction: column;
        padding: 0.7rem;
        margin-left: 3%;
    }

    .value__content {
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;
        max-width: 20rem;
    }

    .value__description {
        text-align: center;
    }

    /*SERVICES SECTION*/

    .services_container {
        display: grid;
        grid-template-columns: 50% 50%;
        gap: 2rem;
    }

    .services__content {
        max-width: 20rem;
    }

    .services_container > div {
        display: flex;
        flex-direction: column;
        align-items: center;
        text-align: center;
    }

    /*GROUP TEAM*/
    .team {
        height: 90vh;
    }

    .groupTeam_container {
        width: 100vw;
        margin: auto;
    }

    .groupTeam_title {
        font-size: 3rem;
        padding-top: 30vh;
        height: 50vh;
    }

    .groupTeam__item {
        height: 40vh;
        gap: 0;
    }

    /*CODERS SECTION*/

    .team-coders {
        display: grid;
        grid-template-columns: 1fr 1fr 1fr;
        grid-template-rows: 1fr 1fr;
        gap: 3rem;
        margin-top: 80px;
    }

    /*FOOTER SECTION*/

    .footer-image iframe {
        max-width: 600px;
    }

    #footer-form input[type="text"],
    #footer-form textarea {
        max-width: 300px;
    }

    /*Home section*/
    .home-banner{
        padding: 5rem 1rem 6rem;
    }

    .home-banner__logo{
        height: 12rem;
    }

    .description p{
        width: 30%;
    }

    .home-banner__title{
        width: 30%;
    }

    .l-section{
        margin-bottom: 2rem;
    }

}

